--- a/index.html
+++ b/index.html
@@ -2,42 +2,73 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Text Encryptor</title>
     <link rel="stylesheet" href="reset.css" />
+    <script
+      src="https://kit.fontawesome.com/fb210e319c.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
       <section class="main">
-        <textarea
-          name=""
-          id="domText"
-          cols="30"
-          rows="10"
-          placeholder="Ingrese el texto aquí"
-          class="text-area"
-        ></textarea>
-        <p>Solo letras minúsculas y sin acentos.</p>
-        <button id="encrypt" onclick="encrypt()" class="button" type="submit">
-          Encrypt
-        </button>
-        <button id="decrypt" onclick="decrypt()" class="button" type="submit">
-          Decrypt
-        </button>
+        <div class="input-container">
+          <textarea
+            name=""
+            id="domText"
+            placeholder="Ingrese el texto aquí"
+            class="text-area"
+          ></textarea>
+        </div>
+        <div class="button-container">
+          <p>
+            <img src="media/vector.png" alt="" />Solo letras minúsculas y sin
+            acentos.
+          </p>
+          <button id="encrypt" onclick="encrypt()" class="button" type="submit">
+            Encriptar
+          </button>
+          <button id="decrypt" onclick="decrypt()" class="button" type="submit">
+            Desencriptar
+          </button>
+        </div>
       </section>
       <section class="show-text">
-        <p id="showText">
-          Solo letras minúsculas y sin acentos.Solo letras minúsculas y sin
-          acentos.Solo letras minúsculas y sin acentos.Solo letras minúsculas y
-          sin acentos.
-        </p>
-        <button id="copy" onclick="copy()" class="button" type="submit">
-          Copiar
-        </button>
+        <div class="text-container">
+          <p id="showText"></p>
+        </div>
+        <div class="button-container">
+          <button id="copy" onclick="copy()" class="button" type="submit">
+            Copiar
+          </button>
+        </div>
       </section>
     </main>
     <footer>
-      <p>Developed by David Cassiet</p>
+      <img src="media/davidcassiet-logo.png" alt="David Cassiet logo" />
+      <div class="media-container">
+        <ul>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/david-cassiet/"
+              class="linkedin"
+              target="_blank"
+              ><i class="fab fa-linkedin-in"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://github.com/DavidCassiet"
+              class="github"
+              target="_blank"
+              ><i class="fab fa-github"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+      <p class="copyright">&copy Desarrollado por David Cassiet - 2022</p>
     </footer>
     <script src="encryptor.js"></script>
   </body>
