--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -20,7 +20,11 @@
             id="domText"
             placeholder="Ingrese el texto aquí"
             class="text-area"
+            spellcheck="false"
           ></textarea>
+          <button onclick="clearInput()" class="clearButton" type="submit">
+            &times
+          </button>
         </div>
         <div class="button-container">
           <p>
