--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </section>
       <section class="show-text">
         <div class="text-container">
-          <p id="showText"></p>
+          <textarea name="" id="showText" readonly></textarea>
         </div>
         <div class="button-container">
           <button id="copy" onclick="copy()" class="button" type="submit">
