--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
       </section>
       <section class="show-text">
         <div class="text-container">
-          <textarea name="" id="showText" readonly></textarea>
+          <textarea
+            name=""
+            id="showText"
+            class="show-textarea"
+            readonly
+          ></textarea>
         </div>
         <div class="button-container">
           <button id="copy" onclick="copy()" class="button" type="submit">
