--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Text Encryptor</title>
+    <title>Encriptador</title>
     <link rel="stylesheet" href="reset.css" />
     <script
       src="https://kit.fontawesome.com/fb210e319c.js"
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="media/padlock-icon.png" />
   </head>
   <body>
     <main>
@@ -40,18 +41,35 @@
         </div>
       </section>
       <section class="show-text">
-        <div class="text-container">
-          <textarea
-            name=""
-            id="showText"
-            class="show-textarea"
-            readonly
-          ></textarea>
+        <div id="hidden" class="invisible">
+          <div class="text-container">
+            <textarea
+              name=""
+              id="showText"
+              class="show-textarea"
+              readonly
+            ></textarea>
+          </div>
+          <div class="button-container">
+            <button id="copy" onclick="copy()" class="button" type="submit">
+              Copiar
+            </button>
+          </div>
         </div>
-        <div class="button-container">
-          <button id="copy" onclick="copy()" class="button" type="submit">
-            Copiar
-          </button>
+        <div id="defect">
+          <div class="defect-template">
+            <div class="img-container">
+              <img
+                src="media/padlock.png"
+                alt="padlock image"
+                class="padlock-img"
+              />
+            </div>
+            <div class="message-container">
+              <h3>Ningun mensaje fue encontrado</h3>
+              <p>Ingresa el texto que desees encriptar o desencriptar</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
