Modifying the alerts

--- a/index.html
+++ b/index.html
@@ -98,5 +98,7 @@
       <p class="copyright">&copy Desarrollado por David Cassiet - 2022</p>
     </footer>
     <script src="encryptor.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="sweetAlert.js"></script>
   </body>
 </html>
