--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Encriptador</title>
-    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style/reset.css" />
     <script
       src="https://kit.fontawesome.com/fb210e319c.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style/style.css" />
     <link rel="icon" href="media/padlock-icon.png" />
   </head>
   <body>
@@ -97,8 +97,8 @@
       </div>
       <p class="copyright">&copy Desarrollado por David Cassiet - 2022</p>
     </footer>
-    <script src="encryptor.js"></script>
+    <script src="static/encryptor.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="sweetAlert.js"></script>
+    <script src="static/sweetAlert.js"></script>
   </body>
 </html>
